--- a/model/ssd_mobilenet_v1_traffic_signs.config
+++ b/model/ssd_mobilenet_v1_traffic_signs.config
@@ -155,7 +155,7 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "gs://${GCS_BUCKET}/ssd_mobilenet_v1_coco_11_06_2017/model.ckpt"
+  fine_tune_checkpoint: "gs://tensorflow-magistra-traindata/ssd_mobilenet_v1_coco_11_06_2017/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -174,9 +174,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "gs://${GCS_BUCKET}/rtsd-train.record"
+    input_path: "gs://tensorflow-magistra-traindata/rtsd-train.record"
   }
-  label_map_path: "gs://${GCS_BUCKET}/rtsd-labels.pbtxt"
+  label_map_path: "gs://tensorflow-magistra-traindata/rtsd-labels.pbtxt"
 }
 
 eval_config: {
@@ -188,9 +188,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "gs://${GCS_BUCKET}/rtsd-test.record"
+    input_path: "gs://tensorflow-magistra-traindata/rtsd-test.record"
   }
-  label_map_path: "gs://${GCS_BUCKET}/rtsd-labels.pbtxt"
+  label_map_path: "gs://tensorflow-magistra-traindata/rtsd-labels.pbtxt"
   shuffle: false
   num_readers: 1
   num_epochs: 1
