--- a/pipeline_config/ssd_mobilenet_v1/optimized30.config
+++ b/pipeline_config/ssd_mobilenet_v1/optimized30.config
@@ -140,7 +140,7 @@ model {
 }
 
 train_config: {
-  batch_size: 24
+  batch_size: 6
   optimizer {
     rms_prop_optimizer: {
       learning_rate: {
@@ -155,7 +155,7 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "gs://tensorflow-magistra-traindata/export/trs_model_large_35950/model.ckpt"
+  fine_tune_checkpoint: "gs://tensorflow-magistra-traindata/ssd_mobilenet_v1_coco_11_06_2017/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -183,7 +183,7 @@ eval_config: {
   num_examples: 1272
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
-   max_evals: 200
+  # max_evals: 200
 }
 
 eval_input_reader: {
@@ -191,7 +191,7 @@ eval_input_reader: {
     input_path: "gs://tensorflow-magistra-traindata/records/optimized_eval30.record"
   }
   label_map_path: "gs://tensorflow-magistra-traindata/all-labels.pbtxt"
-  shuffle: false
+  shuffle: true
   num_readers: 1
   num_epochs: 1
 }
